--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="id">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Nura</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="image/NR.png"
+    <link rel="icon" href="image/NR.png">
 </head>
 <body>
 
@@ -71,7 +71,7 @@
                 </div>
                 <h1>Surya Nurahman</h1>
                 <p class="role">Creative Developer</p>
-                <p class="bio">cofee, code, musik and game</p>
+                <p class="bio">coffee, code, music and game</p>
             </div>
         </div>
 
