--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
                          onclick="showDetails(event, 'proj-2')"
                          onmouseenter="pauseTilt(true)" 
                          onmouseleave="pauseTilt(false)">
-                        <h3></h3>
-                        <p></p>
+                        <h3>To Do List Website</h3>
+                        <p>Website list pekerjaan yang ingin dilakukan</p>
                     </div>
                 </div>
             </div>
@@ -81,6 +81,14 @@
                          onmouseleave="pauseTilt(false)">
                         <h3>Telkom Akses Bekasi</h3>
                         <p>Company Visit</p>
+                    </div>
+
+                     <div class="item clickable-item" 
+                         onclick="showDetails(event, 'cert-5')"
+                         onmouseenter="pauseTilt(true)" 
+                         onmouseleave="pauseTilt(false)">
+                        <h3>RevoU CodingCamp</h3>
+                        <p>CodingCamp Software Engineering</p>
                     </div>
                 </div>
             </div>
